# WeatherMessageBot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DockerFile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  weather_bot.py
.claude/skills/caveman/: SKILL.md
.claude/skills/implementer/: SKILL.md
.claude/skills/implementer/references/: annotation-format.md  dag-execution.md  doc-sync.md  execution-rules.md
.claude/skills/planner/: SKILL.md
.claude/skills/planner/references/: domain-analysis-protocol.md  test-quality-rules.md  writing-rules.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/evals/: evals.json
.claude/skills/pr-review/references/: checklist-deep.md
.claude/skills/references/: common-commands.md  common-workflows.md  project-architecture.md  project-tree.md
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.plan/general/refactor/: structure-versioning-tooling.md
src/weather_message_bot/: __init__.py  __main__.py  config.py  formatting.py  scheduler.py  telegram_sender.py  weather.py
tests/: conftest.py  test_config.py  test_formatting.py  test_main.py  test_scheduler.py  test_telegram_sender.py  test_version.py  test_weather.py
